--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d --watch"
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,9 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.18.3",
     "css-loader": "^2.1.0",
+    "express": "^4.16.4",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
